--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-pdf/renderer": "^4.3.2",
     "@types/bcryptjs": "^3.0.0",
+    "@types/papaparse": "^5.5.2",
     "autoprefixer": "^10.4.23",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "^14.2.35",
     "next-auth": "^4.24.13",
+    "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
     "prisma": "^5.22.0",
     "react": "^18.3.1",
